Professor Dashboard Fixed, Audit added